Word wrapping issue title instead of truncationg

--- a/app/assets/stylesheets/customized.sass
+++ b/app/assets/stylesheets/customized.sass
@@ -25,3 +25,6 @@ body
   white-space: nowrap
   overflow: hidden
   text-overflow: ellipsis
+
+.word-wrap
+  word-wrap: break-word
